d.2015/10/06.21_02_25.46.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 4 commits.
  (use "git push" to publish your local commits)
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/07.12_06_37.44.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 5 commits.
  (use "git push" to publish your local commits)
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/07.12_09_01.54.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 6 commits.
  (use "git push" to publish your local commits)
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/07.12_12_19.03.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 7 commits.
  (use "git push" to publish your local commits)
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/07.12_13_57.62.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 8 commits.
  (use "git push" to publish your local commits)
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/08.14_18_15.94.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	new file:   Doc/K/T.2015.pXr.cs
	modified:   History.txt
