@@ -59,46 +59,56 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-      L211,  1:R#.1    @日知录
-      L219,  2:R#.2    @第17周总结 2015-04-26 --> 2015-05-02
-      L223,  3:zdo focus windows system programming 以及工程实践。
-      L226,  4:zkaizen 纯粹的肥肉还是别吃了；肉食类不要吃冷的。饭店吃饭尽量点热的。
-      L237,  5:R#.3    @国务院办公厅关于2015年部分节假日安排的通知
-      L257,  6:R#.4    @流程图 软件推荐
-      L279,  7:todo 阅读《我用VISIO制图》done 2015-04-28 16:26 当晚未看。
-      L282,  8:R#.5    @绘制类图，类继承
-      L287,  9:R#.6    @EA公司发表自制的EASTL规格 游戏开发方面对STL的性能及功能需求的特点
-      L291, 10:R#.7    @参考下 cp 上的 tl 功能，看能否增强n.tl
-      L296, 11:R#.8    @收集方方面面的模式和实例。
-      L302, 12:R#.9    @收集一份vc6的常用插件
-      L307, 13:R#.10   @zdo 使用 libcurl 写个http post[简繁转化]的例子
-      L312, 14:R#.11   @关灯吃面
-      L320, 15:R#.12   @znote astyle -A1 -R -z1 -n *.cpp
-      L324, 16:R#.13   @zlog hosts
-      L327, 17:zkz Moving from Research to Practice to Close the Achievement Gap
-      L330, 18:R#.14   @3ds max
-      L382, 19:zitem haptix/evolution3d googlecode
-      L385, 20:R#.15   @CMakeFile
-      L422, 21:R#.16   @3ds
-      L432, 22:zitem freeimage 结合play，载入其他类型素材（不限于tga）
-      L435, 23:R#.17   @high performance lock
-      L446, 24:R#.18   @3ds
-      L455, 25:R#.19   @znote BookList
-      L458, 26:todo 深入理解nginx redis设计与实现
-      L502, 27:todo http://download.csdn.net/download/chengdz599/8792741 ??
-      L519, 28:R#.20   @书评
-      L532, 29:R#.21   @Game tmp
-      L546, 30:R#.22   @了解下 markdown 以及 lua
-      L550, 31:R#.23   @Matthew Fisher graphics project
-      L556, 32:zitem dx 10 的例子
-      L560, 33:R#.24   @leetcode
-      L599, 34:R#.25   @一些 game engine 
-      L648, 35:R#.26   @znote merida 山地车
-      L654, 36:R#.27   @shader
-      L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-10-08 11:44:24 L.84 '44136 T1271589103.K ~883 +----+----+----+----+----+
-     TimeCnt : //z 2015-10-05 21:05:30 L.87 '10470 T732247271 .K ~47  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~35  +----+----+----+----+----+
+      L245,  1:R#.1    @日知录
+      L253,  2:R#.2    @第17周总结 2015-04-26 --> 2015-05-02
+      L257,  3:zdo focus windows system programming 以及工程实践。
+      L260,  4:zkaizen 纯粹的肥肉还是别吃了；肉食类不要吃冷的。饭店吃饭尽量点热的。
+      L271,  5:R#.3    @国务院办公厅关于2015年部分节假日安排的通知
+      L291,  6:R#.4    @流程图 软件推荐
+      L313,  7:todo 阅读《我用VISIO制图》done 2015-04-28 16:26 当晚未看。
+      L316,  8:R#.5    @绘制类图，类继承
+      L321,  9:R#.6    @EA公司发表自制的EASTL规格 游戏开发方面对STL的性能及功能需求的特点
+      L325, 10:R#.7    @参考下 cp 上的 tl 功能，看能否增强n.tl
+      L330, 11:R#.8    @收集方方面面的模式和实例。
+      L336, 12:R#.9    @收集一份vc6的常用插件
+      L341, 13:R#.10   @zdo 使用 libcurl 写个http post[简繁转化]的例子
+      L346, 14:R#.11   @关灯吃面
+      L354, 15:R#.12   @znote astyle -A1 -R -z1 -n *.cpp
+      L358, 16:R#.13   @zlog hosts
+      L361, 17:zkz Moving from Research to Practice to Close the Achievement Gap
+      L364, 18:R#.14   @3ds max
+      L416, 19:zitem haptix/evolution3d googlecode
+      L419, 20:R#.15   @CMakeFile
+      L456, 21:R#.16   @3ds
+      L466, 22:zitem freeimage 结合play，载入其他类型素材（不限于tga）
+      L469, 23:R#.17   @high performance lock
+      L480, 24:R#.18   @3ds
+      L489, 25:R#.19   @znote BookList
+      L492, 26:todo 深入理解nginx redis设计与实现
+      L537, 27:todo http://download.csdn.net/download/chengdz599/8792741 ??
+      L554, 28:R#.20   @书评
+      L571, 29:R#.21   @Game tmp
+      L585, 30:R#.22   @了解下 markdown 以及 lua
+      L589, 31:R#.23   @Matthew Fisher graphics project
+      L595, 32:zitem dx 10 的例子
+      L599, 33:R#.24   @leetcode
+      L638, 34:R#.25   @一些 game engine 
+      L687, 35:R#.26   @znote merida 山地车
+      L693, 36:R#.27   @shader
+      L739, 37:R#.28   @DirectX Tool Kit
+      L828, 38:todo 把npp plugins intel slotion 给去掉。 done
+      L844, 39:R#.29   @Math
+      L850, 40:R#.30   @matrix
+      L884, 41:R#.31   @Get pitch, yaw, roll from Quaternion
+      L920, 42:R#.32   @3ds max exporter
+      L946, 43:R#.33   @骨骼动画 cal3d
+      L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
+      L972, 45:R#.35   @svn E155037 以前的操作没有完成
+      L980, 46:R#.36   @matrix 操作
+     Zndex_E : //z 2015-10-08 18:01:46 L.84 '21494 T1717078867.K ~910 +----+----+----+----+----+
+     TimeCnt : //z 2015-10-08 17:56:56 L.84 '21784 T431720221 .K ~49  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36  +----+----+----+----+----+
+     #36  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36    V+.920  L+.972  
      #35  R+ : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~35    V+.905  L+.961  
      #34  R+ : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~34    V+.893  L+.950  
      #33  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33    V+.865  L+.924  
@@ -138,7 +148,9 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-10-08 11:44:24 L.84 '44136 T1271589103.K ~918   R+.35   L+.961  --+----+
+     Version : //z 2015-10-08 18:01:46 L.84 '21494 T1717078867.K ~946   R+.16   L+.475  --+----+
+     #49  V+ : //z 2015-10-08 17:56:56 L.84 '21784 T431720221 .K ~931   R+.16   L+.469  
+     #48  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~920   R+.36   L+.973  V+.920  
      #48  V+ : //z 2015-10-08 11:40:33 L.84 '44367 T1271445387.K ~912   R+.35   L+.961  
      #47  R+ : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~905   R+.35   L+.962  V+.905  
      #47  R+ : //z 2015-10-05 21:05:28 L.87 '10472 T732247246 .K ~893   R+.34   L+.951  V+.893  
@@ -453,6 +465,18 @@ http://www.gametutorials.com/ s 3ds
 //z 2015-05-29 16:00:49 L.216'28751 T750941946 .K[T11,L345,R16,V311]
 02. 读取图像文件，可以使用 freeimg。
 re: 2015-05-29 16:01 zitem freeimage 结合play，载入其他类型素材（不限于tga）
+
+//z 2015-10-08 17:56:56 L.84 '21784 T431720221 .K[T49,L468,R16,V931]
+Modified version of lib3ds reader of .3ds format
+http://www.codeproject.com/Articles/406882/Modified-version-of-lib-ds-reader-of-ds-format
+
+root/OpenSceneGraph/trunk/src/osgPlugins/lib3ds@1563
+http://trac.openscenegraph.org/projects/osg/browser/OpenSceneGraph/trunk/src/osgPlugins/lib3ds?rev=1563
+2015-10-08 18:01 osg 版本 lib3ds
+http://people.inf.elte.hu/lepuaai/Szakdolgozat/OGLPack/include/lib3ds/
+
+2015-10-08 17:57 lib3ds@sf doc 1.2.0
+http://lib3ds.sourceforge.net/lib3ds-1.2.0/doc/html/index.html
 #endregion //z 2015-05-28 17:45:17 L.217'22483 BG57IV3@XCL T1979531806.K.F4146951713-+----+----+
 
 #region 06-04 16:18 R#.17   @high performance lock
@@ -965,3 +989,13 @@ http://www.realtimerendering.com/blog/tag/directcompute/
 sqlite3.exe .svn/wc.db "select * from work_queue"
 sqlite3.exe .svn/wc.db "delete from work_queue"
 #endregion //z 2015-10-08 11:36:09 L.84 '44631 BG57IV3@XCL T1270474995.K.F4146951713-+----+----+
+
+#region 10-08 17:41 R#.36   @matrix 操作
+//z 2015-10-08 17:41:21 L.84 '22719 T430354511 .K[T48,L972,R36,V922]
+01. perform 3d rotations around the local axis of an object using OpenGL 2015-10-08 17:42
+http://pages.cs.wisc.edu/~psilord/docs/local_axis.html
+http://www.gamedev.net/topic/543123-invert-one-axis-in-rotation-matrix/
+
+三維空間的旋轉矩陣
+https://ccjou.wordpress.com/2014/04/29/%E4%B8%89%E7%B6%AD%E7%A9%BA%E9%96%93%E7%9A%84%E6%97%8B%E8%BD%89%E7%9F%A9%E9%99%A3/
+#endregion //z 2015-10-08 17:41:19 L.84 '22721 BG57IV3@XCL T430354486 .K.F4146951713-+----+----+
